--- a/apps/grafana/helmrepo.yaml
+++ b/apps/grafana/helmrepo.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: grafana-repo
-  namespace: flux-system
+  namespace: monitoring
 spec:
   interval: 1h
   url: https://grafana.github.io/helm-charts
