--- a/apps/loki/kustomization.yaml
+++ b/apps/loki/kustomization.yaml
@@ -1,9 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 resources:
   - namespace.yaml
-  - config.yaml
-  - service.yaml
-  - pvc.yaml
-  - deployment.yaml
+  - helmrepo.yaml
+  - loki-values.yaml
+  - loki-helmrelease.yaml
