--- a/apps/promtail/kustomization.yaml
+++ b/apps/promtail/kustomization.yaml
@@ -1,10 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: logging
 resources:
   - namespace.yaml
-  - serviceaccount.yaml
-  - clusterrole.yaml
-  - clusterrolebinding.yaml
-  - configmap.yaml
-  - daemonset.yaml
+  - helmrepo.yaml
+  - promtail-values.yaml
+  - promtail-helmrelease.yaml
